ISSUE: Redmine 722 PURPOSE: Redesign edit agent, styling addresses. DESCRIPTION: fixing highlighting of valid/invalid addresses, removing border which has local override in custon_styles.css that breaks the bootstrap border-{color} classes, and adding two custom styles for desired hightlighting.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -79,6 +79,12 @@ table td .small {
 .border-white { 
 	border: 1px solid white;
 }
+.border-wide-green { 
+	border: 2px solid green;
+}
+.border-wide-grey { 
+	border: 2px solid darkgrey;
+}
 /*********************************************/
 /* BELOW  Misc. Override of Bootstrap Styles */
 /*********************************************/
